# Budget-Tracker-Server

./: .gitignore  Cargo.toml  README.md  Server Specification.docx  ~$rver Specification.docx
public/: index.html  styles.css
public/css/: styles.css
public/js/: app.js
public/views/: 404.html  budgets.html  login.html  register.html  transactions.html
public/views/templates/: budget-card.html
public/views/toasts/: add-transaction-fail.html  add-transaction-success.html  add-user-fail.html  add-user-success.html  budget-create-fail.html  budget-create-success.html  budget-delete-fail.html  budget-delete-success.html  login-fail.html  login-success.html  remove-user-fail.html  remove-user-success.html  transactions-get-fail.html
src/: api.rs  budget.rs  budget_period.rs  can_access_budget.rs  config.rs  database.rs  main.rs  shared.rs  transaction.rs  util.rs
